--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/advertisement-board
     username: postgres
-    password: 123
+    password: 1234
     driver-class-name: org.postgresql.Driver
   liquibase:
     change-log: changelog/main-changelog.xml
@@ -14,6 +14,6 @@ advertisement-board:
     secret: "123"
     expiration: 86400000
   contacts: '{
-    phone: "our phone number",
-    email: "our email"
+    phone: "+7 (920) 987-12-23",
+    email: "example@gmail.com"
   }'
